// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.pipeSql";
option java_outer_classname = "pipeSqlProto";

package pipeSql;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc doSQL (SqlRequest) returns (SqlReply) {}
  // Sends another greeting
  rpc doSQLAgain (SqlRequest) returns (SqlReply) {}
}

// The request message containing the user's name.
message SqlRequest {
  string xXname = 1;
}

// The response message containing the greetings
message SqlReply {
  string message = 1;
}
